feat(rest): add endpoint to share workflows (#552)
Adds a new endpoint to share a workflow with a user.

Closes reanahub/reana-client#680
